--- a/RunGroupWebApp/Views/Shared/_Layout.cshtml
+++ b/RunGroupWebApp/Views/Shared/_Layout.cshtml
@@ -23,7 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" asp-area="" asp-controller="Club" asp-action="Index">Find Clubs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Race" asp-action="Index">Find Races</a>
                         </li>
                     </ul>
                 </div>
